# test-rust

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
sql/init/: account.sql
src/: main.rs
src/api/axum/: mod.rs
src/api/axum/account/: create.rs  mod.rs
src/app/: mod.rs
src/app/_services/domain/: mod.rs
src/app/_shared/application/: mod.rs  use_case_context.rs
src/app/_shared/domain/: aggregate_repository.rs  domain_error.rs  mod.rs
src/app/account/application/: assembler.rs  mod.rs
src/app/account/domain/: account.rs  account_id.rs  factory.rs  mod.rs  repository.rs
src/app/account/infrastructure/: mod.rs  postgresql_account_repository.rs
src/application/shared/: mod.rs  use_case_context.rs
src/application/use_cases/account/: create.rs  delete.rs  mod.rs  update_email.rs  update_name.rs  update_password.rs
src/configuration/: context.rs  init_context.rs  mod.rs
src/domain/: mod.rs
src/domain/account/: account_id.rs  aggregate.rs  factory.rs  mod.rs  repository.rs
src/domain/services/: mod.rs
src/domain/services/id_generation/: id.rs  id_generation_service.rs  mod.rs
src/domain/services/password_hashing/: hashed_password.rs  password_hashing_service.rs
src/domain/shared/: aggregate_repository.rs  domain_error.rs  mod.rs
src/infrastructure/persistence/memory/: in_memory_account_repository.rs  mod.rs
src/infrastructure/services/domain/: bcrypt_password_hashing_service.rs  mod.rs  uuid_id_generation_service.rs
src/test/: mod.rs
src/test/fixtures/: account.rs
src/test/mock/: create_mock_context.rs  mod.rs
(+51 files in other folders)
