[package]
name = "archi"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
lazy_static = "1.4.0"
postgres = "0.19.5"
chrono = "0.4.26"
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng"          # Use a faster (but still sufficiently random) RNG
]
